# bodai-plugins

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
bodai_plugins/: __init__.py  cli.py
bodai_plugins/scripts/: init_bodai_plugin.py  manage_marketplace.py  validate_bodai_plugin.py
tests/: test_cli.py  test_init_bodai_plugin.py  test_manage_marketplace.py  test_marketplace_schema.py  test_validate_bodai_plugin.py
