[project]
name = "bodai-plugins"
version = "0.1.0"
description = "Marketplace scaffolding for Bodai MCP-server Claude Code plugins"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "jsonschema>=4.23",
    "rich>=13.9",
]

[project.scripts]
bodai-plugins = "bodai_plugins.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bodai_plugins"]